added read.me and changed some design

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -62,7 +62,7 @@ a {
 
 .profile {
     width: 300px;
-    background-color: skyblue;
+    background-color: rgb(146, 151, 153);
     position: relative;
     top: 30px;
     height: 300px;
